# leodrive-bus-launch

./: .envrc  .gitignore  .gitmodules  README.md  justfile
data/istanbul-map/: lanelet2_map.osm  map_projector_info.yaml
scripts/: download-map.sh  download.sh  migrate-to-autoware15.py  sim-logging.sh
scripts/dataset/: download-map.sh  download.sh
scripts/simulation/: sim-logging.sh
src/leodrive_bus_sensor_kit_description/: CMakeLists.txt  package.xml
src/leodrive_bus_sensor_kit_description/config/: imu_corrector.param.yaml
src/leodrive_bus_sensor_kit_description/urdf/: VLP-32C.urdf.xacro  sensor_kit.xacro  sensors.xacro
src/leodrive_bus_sensor_kit_launch/: CMakeLists.txt  package.xml
src/leodrive_bus_sensor_kit_launch/config/: concatenate_and_time_sync_node.param.yaml  sensor_kit_calibration.yaml  sensors_calibration.yaml
src/leodrive_bus_sensor_kit_launch/launch/: gnss.launch.xml  imu.launch.xml  lidar.launch.xml  pointcloud_preprocessor.launch.py  sensing.launch.xml
src/leodrive_bus_sensor_kit_launch/urdf/: sensor_kit.xacro
src/leodrive_bus_vehicle_description/: CMakeLists.txt  package.xml
src/leodrive_bus_vehicle_description/config/: vehicle_info.param.yaml
src/leodrive_bus_vehicle_description/urdf/: vehicle.xacro
src/leodrive_bus_vehicle_launch/: CMakeLists.txt  package.xml
src/leodrive_bus_vehicle_launch/config/: mirror.param.yaml  simulator_model.param.yaml
src/leodrive_bus_vehicle_launch/launch/: vehicle_interface.launch.xml
src/leodrive_bus_vehicle_launch/urdf/: vehicle.xacro
