<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leodrive_bus_sensor_kit_description</name>
  <version>0.1.0</version>
  <description>Sensor kit description for Leo Drive Bus-ODD dataset</description>
  <maintainer email="autoware@example.com">Autoware Community</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>camera_description</exec_depend>
  <exec_depend>imu_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
